@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-30T02:40:48Z",
+  "timestamp" : "2022-08-30T08:29:35Z",
   "count_outdated" : 752,
   "uniques_outdated" : 393,
-  "count" : 775,
-  "uniques" : 405,
+  "count" : 776,
+  "uniques" : 406,
   "clones" : [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -77,6 +77,13 @@
     },
     {
       "timestamp": "2022-08-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-30T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
