@@ -1,5 +1,5 @@
 {
-  "count": 23,
+  "count": 24,
   "uniques": 3,
   "clones": [
     {
@@ -54,6 +54,11 @@
     },
     {
       "timestamp": "2022-08-29T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-30T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
