@@ -1,3 +1,11 @@
+2022-08-30T08:29:35Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2954712914
+* notice: last 14d: unq all: 3 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 393 752 / 405 775
+* notice: next accum: outdated-unq outdated-all / unq all: 393 752 / 406 776
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-08-30]
+
 2022-08-30T02:40:48Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2953170204
 * notice: last 14d: unq all: 3 23
